docs/api_definitions/tls_example/httpbin_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: tyk-gw-ingress
  annotations:
    cert-manager.io/issuer: selfsigned-issuer
spec:
  ingressClassName: tyk
  tls:
    - secretName: tls-httpbin
      hosts:
        - myhttpbin
  rules:
    - host: myhttpbin
      http:
        paths:
          - backend:
              service:
                name: httpbin
                port:
                  number: 8000
            path: /httpbin
            pathType: Prefix
